--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ factory-boy==3.2.0
 Faker==8.7.0
 Flask==1.1.2
 Flask-Admin==1.5.7
+Flask-Cors==3.0.10
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-WTF==0.14.3
